--- a/dot_docker/private_config.json
+++ b/dot_docker/private_config.json
@@ -1,9 +1,10 @@
 {
-	"auths": {
-		"lucera.azurecr.io": {}
-	},
+	"auths": {},
 	"credsStore": "osxkeychain",
-	"currentContext": "orbstack",
+	"credHelpers": {
+		"europe-docker.pkg.dev": "gcloud"
+	},
+	"currentContext": "colima",
 	"cliPluginsExtraDirs": [
 		"/opt/homebrew/lib/docker/cli-plugins"
 	]
