update vscode settings

--- a/dot_docker/private_config.json
+++ b/dot_docker/private_config.json
@@ -4,7 +4,7 @@
 	"credHelpers": {
 		"europe-docker.pkg.dev": "gcloud"
 	},
-	"currentContext": "colima",
+	"currentContext": "orbstack",
 	"cliPluginsExtraDirs": [
 		"/opt/homebrew/lib/docker/cli-plugins"
 	]
