update some settings

--- a/dot_config/kitty/private_kitty.conf
+++ b/dot_config/kitty/private_kitty.conf
@@ -4,7 +4,7 @@ include current-theme.conf
 # END_KITTY_THEME
 term xterm-256color
 
-background_image ~/.config/kitty/background.png
+#background_image ~/.config/kitty/background.png
 background_image_layout centered
 background_opacity 1.0
 background_tint 0.97
