--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -1,6 +1,8 @@
 # ~/.config/starship.toml
 # Symbols list: https://starship.rs/presets/nerd-font
 
+"$schema" = 'https://starship.rs/config-schema.json'
+
 command_timeout = 5000
 
 # Inserts a blank line between shell prompts
@@ -8,8 +10,21 @@ add_newline = false
 
 # Change the default prompt format
 format = """\
-[╭╴](238)$os$env_var$all\
-[╰─](238)$character"""
+[╭╴](238)\
+$os\
+${custom.environment}\
+$env_var\
+$all\
+[╰─](238)\
+$character\
+"""
+
+# Custom command to show the environment
+[custom.environment]
+when = "test ! -z $CONTEXT_ENV"
+style = "blue"
+command = "echo $CONTEXT_ENV"
+format = "[$output]($style) "
 
 # Change the default prompt characters
 [character]
