update vscode file associations

--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -108,7 +108,8 @@
   "files.associations": {
     ".env": "properties",
     "*.conf": "properties",
-    "*.bak": "bat"
+    "*.bak": "bat",
+    "*.sh.tmpl": "shellscript"
   },
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
