update brewfile and add helm repo

--- a/private_Library/private_Preferences/helm/private_repositories.yaml
+++ b/private_Library/private_Preferences/helm/private_repositories.yaml
@@ -19,3 +19,12 @@ repositories:
   password: ""
   url: https://argoproj.github.io/argo-helm
   username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: bitnami
+  pass_credentials_all: false
+  password: ""
+  url: https://charts.bitnami.com/bitnami
+  username: ""
