update readme and missing updates

--- a/dot_docker/private_config.json
+++ b/dot_docker/private_config.json
@@ -1,10 +1,13 @@
 {
-  "auths": {
-    "ghcr.io": {}
-  },
-  "credsStore": "osxkeychain",
-  "credHelpers": {
-    "europe-docker.pkg.dev": "gcloud"
-  },
-  "cliPluginsExtraDirs": ["/opt/homebrew/lib/docker/cli-plugins"]
+	"auths": {
+		"ghcr.io": {},
+		"registry.marvincloud.io": {}
+	},
+	"credsStore": "osxkeychain",
+	"credHelpers": {
+		"europe-docker.pkg.dev": "gcloud"
+	},
+	"cliPluginsExtraDirs": [
+		"/opt/homebrew/lib/docker/cli-plugins"
+	]
 }
