--- a/private_Library/private_Preferences/helm/private_repositories.yaml
+++ b/private_Library/private_Preferences/helm/private_repositories.yaml
@@ -37,3 +37,39 @@ repositories:
   password: ""
   url: https://charts.bitwarden.com/
   username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: cilium
+  pass_credentials_all: false
+  password: ""
+  url: https://helm.cilium.io/
+  username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: metallb
+  pass_credentials_all: false
+  password: ""
+  url: https://metallb.github.io/metallb
+  username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: metrics-server
+  pass_credentials_all: false
+  password: ""
+  url: https://kubernetes-sigs.github.io/metrics-server/
+  username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: jetstack
+  pass_credentials_all: false
+  password: ""
+  url: https://charts.jetstack.io
+  username: ""
