--- a/private_Library/private_Preferences/helm/private_repositories.yaml
+++ b/private_Library/private_Preferences/helm/private_repositories.yaml
@@ -73,3 +73,30 @@ repositories:
   password: ""
   url: https://charts.jetstack.io
   username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: kedacore
+  pass_credentials_all: false
+  password: ""
+  url: https://kedacore.github.io/charts
+  username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: prometheus-community
+  pass_credentials_all: false
+  password: ""
+  url: https://prometheus-community.github.io/helm-charts
+  username: ""
+- caFile: ""
+  certFile: ""
+  insecure_skip_tls_verify: false
+  keyFile: ""
+  name: grafana-community
+  pass_credentials_all: false
+  password: ""
+  url: https://grafana-community.github.io/helm-charts
+  username: ""
